--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install and Build
       run: |
         npm install
-        npm run serve
+        npm run build
 
     # Runs a single command using the runners shell
     - name: Deploy
