--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pic-compress",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gittig11.github.io/github-actions-demo",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
